# introspector-gadget

./: Cargo.toml  README.md
.circleci/: config.yml
src/blocking/: client.rs
src/introspect/: introspect_query.graphql  introspect_schema.graphql  schema.rs
src/introspect/fixtures/: custom_scalars.json
