[package]
name = "introspector-gadget"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "GraphQL introspection utilities"
repository = "https://github.com/apollographql/introspector-gadget"
authors = ["Apollo Developers <opensource@apollographql.com>"]
readme = "README.md"

[dependencies]
apollo-encoder = "0.4.0"
backoff = "0.4"
graphql_client = "0.11.0"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
] }
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
indoc = "1.0"
httpmock = "0.6"
pretty_assertions = "1.2"
